<resources>
    <string name="app_name">Budget Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="add_category">Category</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="category_type">Category Type</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>



</resources>
