<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <Button
        android:id="@+id/addExpense"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/darker_gray"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/add_expense"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:visibility="visible" />

    <Button
        android:id="@+id/addIncome"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/holo_red_light"
        android:text="@string/add_income"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <Button
        android:id="@+id/addCategory"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_light"
        android:text="@string/add_category"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:visibility="visible" />

</LinearLayout>
